--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   english_words: ^4.0.0
   provider: ^6.0.5
   flutter_translate: ^4.0.3
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
